--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Laila");
 @-webkit-keyframes cardenter {
   0% {
     transform: rotatey(0deg);
@@ -32,18 +33,44 @@
     display: none; }
   /* line 91, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .player-one {
-    margin-top: 30px; } }
+    margin-top: 30px; }
+  /* line 117, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #nav-wrapper-top .collapsers input {
+    display: none; }
+  /* line 121, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #nav-wrapper-top #icon {
+    display: block;
+    float: right; }
+  /* line 126, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #nav-wrapper-top #responsive #nav-wrapper-top {
+    position: relative;
+    right: 0;
+    top: 0;
+    display: block;
+    text-align: left; }
+    /* line 134, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    #nav-wrapper-top #responsive #nav-wrapper-top .collapsers input {
+      float: none;
+      display: block;
+      text-align: left;
+      top: 0;
+      right: 0; }
+    /* line 142, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    #nav-wrapper-top #responsive #nav-wrapper-top #icon {
+      position: absolute;
+      right: 0;
+      top: 0; } }
 
-/* line 96, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 161, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); }
 
-/* line 100, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 165, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .test-wrapper {
   transform: translate(0, 0);
   -webkit-transform: translate(0, 0); }
 
-/* line 105, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 170, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .react-logo {
   animation: react-logo-spin infinite 15s linear;
   height: 50px;
@@ -51,7 +78,7 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 113, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 178, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .touch {
   height: 37px;
   margin: auto;
@@ -59,14 +86,14 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 121, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 186, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-container {
   display: flex;
   -webkit-display: flex;
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap; }
 
-/* line 128, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 193, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card {
   margin-bottom: 10px;
   position: relative;
@@ -78,7 +105,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 140, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 205, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -91,7 +118,7 @@ body {
     -webkit-display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 151, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 216, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
@@ -106,18 +133,18 @@ body {
     width: 100%;
     animation-name: cardenter;
     animation-fill-mode: forwards; }
-  /* line 163, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 228, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 169, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 234, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 175, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 240, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
   transform: rotatey(-180deg);
   -webkit-transform: rotatey(-180deg);
@@ -132,14 +159,14 @@ body {
   animation: cardenter .5s;
   -webkit-animation: cardenter .5s; }
 
-/* line 182, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 247, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .front > p {
   padding: auto;
   margin: auto;
   font: 80px/160px Georgia, Times New Roman, serif;
   position: absolute; }
 
-/* line 201, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 266, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -148,12 +175,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 210, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 275, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 216, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 281, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -162,34 +189,34 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 290, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 230, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 295, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
-  background-color: rgba(51, 102, 255, 0.4);
+  background: linear-gradient(to left, rgba(188, 3, 9, 0.7), rgba(214, 32, 38, 0.7), rgba(142, 9, 14, 0.7));
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px; }
-  /* line 237, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 302, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 240, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 305, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
-    transition: 0.4s;
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -o-transition: 0.4s;
-    border: 1px solid rgba(0, 0, 0, 0.5); }
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -o-transition: 0.2s;
+    border: 1px solid rgba(255, 255, 255, 0.7); }
 
 /* SIDE NAV */
-/* line 248, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 313, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
-  background: rgba(0, 0, 255, 0.5);
+  background: rgba(214, 32, 38, 0.8);
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   position: fixed;
@@ -235,8 +262,10 @@ body {
   to {
     visibility: visible; } }
 
-/* line 308, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 375, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
+  text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
+  color: white;
   position: fixed;
   height: 30px;
   width: 0px;
@@ -244,29 +273,31 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 317, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 386, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px;
-    background: rgba(244, 167, 66, 0.8);
+    background: linear-gradient(to left, rgba(188, 3, 9, 0.7), rgba(214, 32, 38, 0.7), rgba(142, 9, 14, 0.7));
     animation-name: slideOut;
     animation-duration: 1s;
-    animation-fill-mode: forwards; }
-    /* line 323, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    animation-fill-mode: forwards;
+    text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4); }
+    /* line 394, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
+      text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 329, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 401, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 336, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 408, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
-    background: rgba(244, 167, 66, 0.8);
+    background: linear-gradient(to left, rgba(188, 3, 9, 0.7), rgba(214, 32, 38, 0.7), rgba(142, 9, 14, 0.7));
     animation-name: slideIn;
     animation-duration: 1s;
     animation-fill-mode: forwards;
@@ -274,18 +305,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 344, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 416, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 351, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 423, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 358, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 430, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -297,14 +328,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 370, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 442, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 377, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 449, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -315,7 +346,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 390, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 462, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -326,7 +357,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 404, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 476, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -336,7 +367,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 415, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 487, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -346,7 +377,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 425, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 497, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -357,7 +388,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 436, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 508, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -368,7 +399,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 447, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 519, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -379,47 +410,47 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 492, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 564, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 497, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 569, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 521, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 593, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
   color: #ff0000;
   position: absolute; }
 
-/* line 527, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 599, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
   color: #ff0000;
   position: absolute; }
 
-/* line 533, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 605, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
   color: #000;
   position: absolute; }
 
-/* line 539, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 611, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
   color: #000;
   position: absolute; }
 
-/* line 545, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 617, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 552, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 624, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
@@ -442,38 +473,72 @@ div[class*='suit']:after {
   100% {
     color: black; } }
 
-/* line 584, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 656, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .winner {
   animation: winner .2s;
   animation-iteration-count: 5; }
 
-/* line 589, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 661, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .loser {
   animation: loser 2s; }
 
 /* NAVBAR */
-/* line 596, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 669, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #nav-wrapper-top {
+  display: flex;
+  opacity: .8;
   width: 100%;
   float: left;
   margin: 0 0 3em 0;
-  padding: 0;
+  padding: 5px;
   list-style: none;
-  background-color: #f2f2f2;
+  background: linear-gradient(to left, #bc0309, #d62026, #8e090e);
   border-bottom: 1px solid #ccc;
-  border-top: 1px solid #ccc; }
-  /* line 606, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-  #nav-wrapper-top li {
-    float: left; }
-    /* line 609, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-    #nav-wrapper-top li a {
-      display: block;
-      padding: 8px 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #069;
-      border-right: 1px solid #ccc; }
-      /* line 617, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-      #nav-wrapper-top li a:hover {
-        color: #c00;
-        background-color: #fff; }
+  border-top: 1px solid #ccc;
+  box-shadow: 0px 1px 1px black;
+  position: fixed; }
+  /* line 684, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #nav-wrapper-top #icon {
+    margin: 0 auto !important; }
+  /* line 689, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #nav-wrapper-top input {
+    float: left;
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: italic;
+    font-family: "Laila";
+    font-size: 20px;
+    color: white; }
+    /* line 699, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    #nav-wrapper-top input:disabled {
+      background: none;
+      border: none;
+      color: gray; }
+    /* line 705, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    #nav-wrapper-top input:hover {
+      -webkit-mask-image: -webkit-linear-gradient(top, black, rgba(0, 0, 0, 0.5) 50%, black);
+      -webkit-mask-image: linear-gradient(top, black, rgba(0, 0, 0, 0.5) 50%, black);
+      transition: 0.2s;
+      -webkit-transition: 0.2s;
+      -moz-transition: 0.2s;
+      -o-transition: 0.2s; }
+
+/* line 713, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+#footer {
+  width: 100%;
+  padding: 2em;
+  margin: 15px 0 0 0;
+  position: fixed;
+  display: inline-block;
+  left: 0;
+  bottom: 0;
+  box-shadow: 1px -2px 1px black;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  text-align: center;
+  z-index: 30; }
+
+/* line 732, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+body {
+  padding-bottom: 100px; }
