--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -91,7 +91,72 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 	.player-one {
 		margin-top: 30px;
 	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	#nav-wrapper-top {
+	
+
+		.collapsers input {
+			display: none;
+		}
+
+		#icon {
+			display: block;
+			float: right;		
+		}
+
+		#responsive #nav-wrapper-top{
+			
+			position: relative;
+			right: 0;
+			top: 0;
+			
+			display: block;
+			text-align: left;
+			.collapsers  input {
+				float: none;
+				display: block;
+				text-align: left;
+				top: 0;
+				right: 0;				
+			}
+
+			#icon {
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
+		}
+
+		// #dropdown-top#responsive {
+
+		// }
+	}
+
 }
+
+
+
+
+
 
 body {
 	background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
@@ -230,7 +295,7 @@ body {
 #custom-button {
 	border-radius: 3px;
 	border: 1px solid rgba(0, 0, 0, .0);
-	background-color: $main-background-color;
+	background: linear-gradient(to left, rgba(188, 3, 9, .7), rgba(214, 32, 38, .7), rgba(142, 9, 14, .7));
 	padding-top: 10px;
 	padding-bottom: 10px;
 	width: 100px;
@@ -238,15 +303,17 @@ body {
 		opacity: .4;
 	}
 	&:hover {
-		@include transition(.4s);
-		border: 1px solid rgba(0, 0, 0, .5);
+		@include transition(.2s);
+		border: 1px solid rgba(255, 255, 255, .7);
 	}
 }
 
 /* SIDE NAV */
 
 .sidenav-button-a {
-	background: transparentize(blue, .5);
+	// background: transparentize(blue, .5);
+	background: transparentize(rgb(214, 32, 38), .2);
+	
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
 	position: fixed;
@@ -306,6 +373,8 @@ body {
 }
 
 .nav-wrapper {
+	text-shadow: $text-shadow;
+	color: white;
 	position: fixed;
 	height: 30px;
 	width: 0px;
@@ -316,11 +385,14 @@ body {
 
 	.nav-menu {
 		@include clear-box;
-		background: rgba(244, 167, 66, .8);
+		// background: rgba(244, 167, 66, .8);
+		background: linear-gradient(to left, rgba(188, 3, 9, .7), rgba(214, 32, 38, .7), rgba(142, 9, 14, .7));
 		animation-name: slideOut;
 		animation-duration: 1s;
 		animation-fill-mode: forwards;
+		text-shadow: $text-shadow;
 		.menu-items {
+			text-shadow: $text-shadow;
 			animation-name: showItems;
 			animation-delay: .9s;
 			animation-duration: .1s;
@@ -334,7 +406,7 @@ body {
 	}
 
 	.nav-menu-closed {
-		background: rgba(244, 167, 66, .8);
+		background: linear-gradient(to left, rgba(188, 3, 9, .7), rgba(214, 32, 38, .7), rgba(142, 9, 14, .7));
 		animation-name: slideIn;
 		animation-duration: 1s;
 		animation-fill-mode: forwards;
@@ -592,37 +664,74 @@ div[class*='suit']:after {
 
 
 /* NAVBAR */
+@import url('https://fonts.googleapis.com/css?family=Laila');
 
 #nav-wrapper-top {
+	display: flex;
+	// flex-wrap: wrap; 
+	opacity: .8;
 	width: 100%;
 	float: left;
 	margin: 0 0 3em 0;
-	padding: 0;
+	padding: 5px;
 	list-style: none;
-	background-color: #f2f2f2;
+	background: linear-gradient(to left, rgb(188, 3, 9), rgb(214, 32, 38), rgb(142, 9, 14));
 	border-bottom: 1px solid #ccc; 
-	border-top: 1px solid #ccc; 
+	border-top: 1px solid #ccc;
+	box-shadow: 0px 1px 1px black; 
+	position: fixed;
 
-	li {
-		float: left; 
+	#icon {
+		
+		margin: 0 auto !important;
+	}
 
-		a {
+	input {
+		float: left;
 			display: block;
-			padding: 8px 15px;
+			padding: 10px 20px;
 			text-decoration: none;
-			font-weight: bold;
-			color: #069;
-			border-right: 1px solid #ccc; 
+			font-weight: italic;
+			font-family: "Laila";
+			font-size: 20px;
+			color: white;
+
+			&:disabled {
+				background: none;
+				border: none;	
+				color: gray;
+			}
 
 			&:hover {
-				color: #c00;
-				background-color: #fff; 
-			}
+				-webkit-mask-image: -webkit-linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,.5) 50%, rgba(0,0,0,1));
+				-webkit-mask-image: linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,.5) 50%, rgba(0,0,0,1));
+				@include transition(.2s);
+			}			
 		}
-	}
 }
 
+#footer {
+	width: 100%;
+	padding: 2em;
+	margin: 15px 0 0 0;
+	position: fixed;
+	display: inline-block;
+	left: 0;
+	bottom: 0;
+	box-shadow: 1px -2px 1px black;
+	background-color: rgba(0, 0, 0, .9);
+	color: white;
+	text-align: center;
+	z-index: 30;
+}
 
+// html {
+// 	padding-bottom: 500px;
+// }
+
+body {
+	padding-bottom: 100px;
+}
 
 
 
